[project]
name = "pottery-semaphore"
version = "0.1.0"
description = "A Redis/Valkey distributed Semaphore using the Pottery library"
readme = "README.md"
authors = [
    { name = "Doni Crosby", email = "doni@crosby.email" }
]
requires-python = ">=3.9"
dependencies = [
    "pottery>=3.0.1",
]

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-docker>=3.1.1",
    "ruff>=0.14.11",
    "ty>=0.0.11",
    "types-redis>=4.6.0.20241004",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (require Docker)",
]
